--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-
-
+        "nex/yii2-datepicker": "dev-master@dev",
         "jaeger/querylist": "^4.0"
     },
     "require-dev": {
